force-app/main/default/objects/Credential__c/Credential__c.object-meta.xml
<CustomObject>
    <description>Stores user-defined secrets</description>
    <label>Credential</label>
    <nameField>
        <label>Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credentials</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>