force-app/main/default/objects/Credential__c/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <description>E-mail address</description>
    <inlineHelpText>E-mail address</inlineHelpText>
    <label>E-mail Address</label>
    <type>Email</type>
</CustomField>