force-app/main/default/objects/Credential__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>Website address</description>
    <inlineHelpText>Website address</inlineHelpText>
    <label>Link</label>
    <type>Url</type>
</CustomField>