force-app/main/default/objects/Credential__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Secret</description>
    <inlineHelpText>Secret</inlineHelpText>
    <label>Password</label>
    <type>TextArea</type>
</CustomField>