force-app/main/default/objects/Credential__c/fields/UsernameOrLogin__c.field-meta.xml
<CustomField>
    <fullName>UsernameOrLogin__c</fullName>
    <description>Username or login</description>
    <inlineHelpText>Username or login</inlineHelpText>
    <label>Username / Login</label>
    <length>50</length>
    <type>Text</type>
</CustomField>