force-app/main/default/objects/Credential__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UsernameOrLogin__c</columns>
    <columns>EmailAddress__c</columns>
    <columns>Link__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>